--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <head>
-	<title> site under maintenance <text>
+	<title>Muhammad Owais Bawany<text>
+	<meta
+	name = "Banner" content = "Site Under Maintenance"
+	> 
 	</head>
