--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-	<title>Muhammad Owais Bawany<text>
+	<title>Muhammad Owais Bawany<title>
 	<meta
 	name = "Banner" content = "Site Under Maintenance"
 	> 
