--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
 	<title>Muhammad Owais Bawany<title>
-	<meta
-	name = "Banner" content = "Site Under Maintenance"
-	> 
 	</head>
+
+<body>
+	<p><b>Site Under Maintainance/b></p>
+</body>
