--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </style>
 
 <article>
-    <h1>We&rsquo;ll be back soon!</h1>
+    <h1>&rsquo;Website will be back soon!</h1>
     <div>
-        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto:#">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
-        <p>&mdash; The Team</p>
+        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto:m.owaisbawany@gmai.com">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
+        <p>&mdash; Muhammad Owais Bawany</p>
     </div>
 </article>
