--- a/contact.html
+++ b/contact.html
@@ -28,14 +28,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </head>
 <body> 
 	<!-- banner -->
-	<div class="banner">
+	<div class="banner about-w3banner">
 		<div class="banner-w3lsinfo"> 
 			<!-- header -->
 			<div class="header">
 				<div class="container">
 					<div class="logo">
 						<h1><a href="index.html">Muhammad Owais Bawany</a></h1>
-						<h2><a href="index.html">Thank you for Visiting!</a></h2>
 					</div> 
 					<div class="menu">
 						<a href="#" class="navicon"></a> 
@@ -60,55 +59,90 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="clearfix"> </div>
 				</div>
 			</div>
-			<!-- //header --> 
-			<!-- banner-text -->
-			<div class="banner-text"> 
-				<div class="container"> 
-						<p>Thank you for visiting!</p>
-					</div> 
-			</div>
-			<!-- //banner-text -->
+			<!-- //header -->  
 			<div class="w3agile-address"> 
-				<div class="container"> 
+					<div class="container"> 
 					<ul>
-					<!--	<li><a href="https://www.linkedin.com/in/Muhammad-Bawany/"><img src="img/linkedin.png"></a></li>
-    					<li><a href="https://www.instagram.com/obawany/"><img src="img/instagram.png"></a></li>
-    					<li><a href="https://www.facebook.com/obawany"><img src="img/facebook.png"></a></li>
-    					<li><a href="https://github.com/obawany"><img src="img/github.png"></a></li> -->
-
-    					             <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <a target="_blank" href="http://github.com/obawany" class="btn btn-sm btn-outline btn-black">
-                            <i class="fa fa-github-square fa-5x hidden-s hidden-xs"></i>
-                            <i class="fa fa-github-square fa-2x hidden-md hidden-lg"></i>
-                        </a>
-                        <a target="_blank" href="http://facebook.com/obawany" class="btn btn-sm btn-outline btn-black">
-                            <i class="fa fa-facebook-square fa-5x hidden-s hidden-xs"></i>
-                            <i class="fa fa-facebook-square fa-2x hidden-md hidden-lg"></i>
-                        </a>
-                        <a target="_blank" href="http://twitter.com/muhammadobawany" class="btn btn-sm btn-outline btn-black">
-                            <i class="fa fa-twitter-square fa-5x hidden-s hidden-xs"></i>
-                            <i class="fa fa-twitter-square fa-2x hidden-md hidden-lg"></i>
-                        </a>
-                        <a target="_blank" href="http://ca.linkedin.com/in/Muhammad-Bawany"
-                           class="btn btn-sm btn-outline btn-black">
-                            <i class="fa fa-linkedin-square fa-5x hidden-s hidden-xs"></i>
-                            <i class="fa fa-linkedin-square fa-2x hidden-md hidden-lg"></i>
-                        </a>
-                    </div>
-                </div>
-                <div>
-
 						<li><i class="fa fa-map-marker" aria-hidden="true"></i>Ottawa, ON, Canada</li>
-						<li><i class="fa fa-phone" aria-hidden="true"> </i>+1 204 869 5072</li>
-						<li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:muhammadowaisbawany@gmail.com"> muhammadowaisbawany@gmail.com</a></li>
+						<li><i class="fa fa-phone" aria-hidden="true"> </i>  +1 204 869 5072</li>
+						<li><i class="fa fa-envelope" aria-hidden="true"></i><a href="muhammadowaisbawany@gmail.com"> muhammadowaisbawany@gmail.com</a></li>
 					</ul>
-					</div>
 				</div> 
 			</div> 
 		</div>
 	</div>
 	<!-- //banner -->  
+	<!-- contact -->
+	<div class="about contact">
+		<div class="container">
+			<div class="w3ls-title">
+				<h2 class="agileits-title">Contact Me</h2>
+			</div>
+			<div class="contact-agileinfo">
+				<div class="col-md-7 w3agile-contact-grids">
+					<div class="ctact-w3left">
+						<form action="#" method="post">
+							<span>
+								<i>Name</i>
+								<input type="text" name="Name" placeholder="" required="">
+							</span>
+							<span>
+								<i>Email</i>
+								<input type="email" name="Email" placeholder="" required="">
+							</span>
+							<span>
+								<i>Subject</i>
+								<input type="text" name="Subject" placeholder="" required="">
+							</span>
+							<span>
+								<i>Message</i>
+								<textarea name="Message" placeholder="" required=""></textarea>
+							</span>
+							<div class="w3_submit">
+								<input type="submit" value="Submit Now">
+							</div>
+						</form>
+					</div>
+				</div> 
+				<div class="col-md-5 w3agile-contact-grids"> 
+					<p>Text for viewer</p>
+					<div class="profile-grids">  
+						<h5>Contact Info</h5>
+						<ul> 
+							<li> 
+								<b>PHONE</b> : +1 204 869 5072
+							</li> 
+						<!--	<li> 
+								<b>ADDRESS</b> : Ottawa,ON Canada 
+							</li> -->
+						</ul>
+					</div>
+					<div class="profile-grids">  
+						<h5>Social Media Info</h5>
+						<ul> 
+							<li> 
+								<b>E-MAIL</b> : <a href="muhammadowaisbawany@gmail.com"> muhammadowaisbawany@gmail.com</a>
+							</li>
+							<li>
+								<b>LINKEDIN</b> : <a href="https://www.linkedin.com/in/Muhammad-Bawany/"> https://www.linkedin.com/in/Muhammad-Bawany/</a>
+							</li>
+							<li> 
+								<b>TWITTER</b> : <a href="https://twitter.com/muhammadobawany">https://twitter.com/muhammadobawany</a>
+							</li> 
+							
+							<li>
+								<b>FACEBOOK</b> : <a href="https://www.facebook.com/obawany"> https://www.facebook.com/obawany</a>
+							</li>
+
+						</ul>
+					</div>
+					<div class="clearfix"> </div> 
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+		</div>
+	</div>
+	<!-- //contact -->
 	<!-- footer -->  
 	<div class="w3agile-footer">
 		<div class="container"> 
