--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<ul class="toggle-menu">
 								<li><a href="index.html" class="active"> Home</a></li>
 								<li><a href="about.html"> About Me</a></li>  
-								<li><a href="skills.html"> Skills</a></li>
+								<!-- <li><a href="skills.html"> Skills</a></li>
 								<li><a href="experience.html">Experience</a></li> 
 								<li><a href="education.html">Education</a></li>
-								<li><a href="projects.html"> My Projects</a></li>							
+								<li><a href="projects.html"> My Projects</a></li>	 -->						
 								<li><a href="contact.html"> Contact Me</a></li>
 							</ul>
 						</div> 
