Resume Downlodable made

--- a/about.html
+++ b/about.html
@@ -131,7 +131,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="clearfix"> </div>
 					</div> 
 					<div class="hire-w3lgrids">
-						<a href="https://github.com/obawany/obawany.github.io/blob/master/Resume%20CV%20Final.pdf" class="wthree-more nina" data-text="DOWNLOAD Resume"> 
+						<a href="https://github.com/obawany/obawany.github.io/blob/master/Resume.pdf" download class="wthree-more nina" data-text="DOWNLOAD Resume">
+
 							<span>D</span><span>o</span><span>w</span><span>n</span><span>l</span><span>o</span><span>a</span><span>d</span> <span>R</span><span>E</span><span>S</span><span>U</span><span>M</span><span>E</span>
 							<img src="">				
 						</a> 
@@ -142,9 +143,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div> 
 				<div class="clearfix"> </div> 
 				<div class="about-text agileits-w3layouts"> 
-					<p> Aliquam aliquet sapien quis mauris semper suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse laoreet sem sit amet dolor luctus pellentesque. Pellentesque eleifend tellus at interdum elementum. Nam egestas molestie elit. Vivamus sed accumsan quam, a mollis magna. Nam aliquet eros eget sapien consequat tincidunt at vel nibh sed accumsan quam. 
-					Maecenas pharetra dapibus posuere. Praesent odio sem, varius quis dolor vel, maximus dapibus mi. Pellentesque mattis mauris neque. Nam aliquam turpis ante, at cursus massa ullamcorper ut.<br>Nam egestas molestie elit. Vivamus sed accumsan quam, a mollis magna. Nam aliquet eros eget sapien consequat tincidunt at vel nibh sed accumsan quam. 
-					uspendisse laoreet sem sit amet dolor luctus pellentesque Maecenas pharetra dapibus posuere. Praesent odio sem, varius quis dolor vel, maximus dapibus mi. Pellentesque mattis mauris neque. Nam aliquam turpis ante, at cursus massa ullamcorper ut eleifend tellus at interdum elementum.</p>
+					<p> </p>
 				</div>
 			</div> 
 		</div>
