--- a/about.html
+++ b/about.html
@@ -44,11 +44,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="toggle effect-3"> 
 							<ul class="toggle-menu">
 								<li><a href="index.html" class="active"> Home</a></li>
-								<!-- <li><a href="about.html"> About Me</a></li>  
-								<li><a href="skills.html"> Skills</a></li>
+								<li><a href="about.html"> About Me</a></li>  
+								<!-- <li><a href="skills.html"> Skills</a></li>
 								<li><a href="experience.html">Experience</a></li> 
 								<li><a href="education.html">Education</a></li>
-								<li><a href="projects.html"> My Projects</a></li>		 -->					
+								<li><a href="projects.html"> My Projects</a></li>							 -->
 								<li><a href="contact.html"> Contact Me</a></li>
 							</ul>
 						</div> 
