download button fixed

--- a/index.html
+++ b/index.html
@@ -73,9 +73,18 @@
           <div class="col-lg-8 mx-auto">
             <p class="text-faded mb-5">I am a 4th-year Computer Science Student at the University of Ottawa graduating in April 2018.</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">My background</a>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://github.com/obawany/obawany.github.io/blob/master/Resume.pdf" download class="wthree-more nina" >Download Resume</a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://github.com/obawany/obawany.github.io/blob/master/Resume.pdf" class="wthree-more nina" >Download Resume</a>
           </div>
-        </div>
+<!--           <div class="hire-w3lgrids">
+            <a href="https://github.com/obawany/obawany.github.io/blob/master/Resume.pdf" class="wthree-more nina" data-text="DOWNLOAD Resume"> 
+              <span>D</span><span>o</span><span>w</span><span>n</span><span>l</span><span>o</span><span>a</span><span>d</span> <span>R</span><span>E</span><span>S</span><span>U</span><span>M</span><span>E</span>
+              <img src="">        
+            </a>  -->
+        <!--    <a href="" class="wthree-more w3more1 nina" data-text="hire me"> 
+              <span>h</span><span>i</span><span>r</span><span>e</span> <span>m</span><span>e</span>
+            </a> -->
+<!--           </div>  
+ -->        </div>
       </div>
             <!--     <div class="hire-w3lgrids">
             <a href="https://github.com/obawany/obawany.github.io/blob/master/Resume.pdf" download class="wthree-more nina" data-text="DOWNLOAD Resume">
