updated background picture

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        Muhammad Owais Bawany</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"><strong>Muhammad Owais Bawany</strong></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -66,13 +65,13 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>HELLO WORLD! </br> Welcome to my Website </strong>
+				<strong>I like to <u>develop</u> things that <br>make a difference</strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">I am a 4th-year Computer Science Student at the University of Ottawa graduating in April 2018.</p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">My background</a>
+            <p class="text-faded mb-5">Coffee | Code | Sleep</p>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">About me</a>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://github.com/obawany/obawany.github.io/blob/master/Resume.pdf" class="wthree-more nina" >Download Resume</a>
           </div>
 <!--           <div class="hire-w3lgrids">
@@ -123,7 +122,7 @@
 
 
 </p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Education</a>
+<!--            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Education</a>-->
           </div>
         </div>
       </div>
